[package]
name = "ioexp"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2018"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "async_echo"
path = "src/async_echo.rs"

[[bin]]
name = "async_cat"
path = "src/async_cat.rs"

[[bin]]
name = "httpget"
path = "src/httpget.rs"

[[bin]]
name = "tee"
path = "src/tee.rs"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
futures = "0.3.8"
hyper = "0.13.9"
pin-project = "1.0.2"
reqwest = "0.10.10"
tokio = { version = "0.2", features = ["full"] }
