[package]
name = "ioexp"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2018"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "async_echo"
path = "src/async_echo.rs"

[[bin]]
name = "async_cat"
path = "src/async_cat.rs"

[[bin]]
name = "httpget"
path = "src/httpget.rs"

[[bin]]
name = "tee"
path = "src/tee.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

[[bin]]
name = "echo_server"
path = "src/echo_server.rs"

[[bin]]
name = "echo_client"
path = "src/echo_client.rs"

[[bin]]
name = "tokio_echo_server"
path = "src/tokio_echo_server.rs"

[[bin]]
name = "tokio_echo_client"
path = "src/tokio_echo_client.rs"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
chrono = "0.4.19"
futures = "~0.3.12"
hyper = "~0.14"
pin-project = "~1.0.4"
reqwest = "~0.11.0"
structopt = "0.3.21"
tokio = { version = "~1.1.0", features = ["full"] }
tokio-stream = "~0.1.2"
tokio-util = { version = "~0.6.1", features = ["io"] }
users = "0.11.0"
